# handler/listOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Sumary List opening
+// @Description List a new job opening
+// @Tags openings
+// @Accpet json
+// @Produce json
+// @Success 200 {object} ListOpeningResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ShowOpeningsHandler(c *gin.Context) {
 	openings := []schemas.Opening{}
 
